tests/architecture/fixtures/invalid/layer-boundaries/hook-concrete-facade.ts
import { MemoryCommerceStore } from "@nexoraxs/sdk/testing";
export const store = new MemoryCommerceStore();
